build/log/idf_py_stderr_output_25634
/home/ufi/programming/The-One-Ring/main/TheOneRing.c: In function 'app_main':
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:57:36: error: statement with no effect [-Werror=unused-value]
   57 |   for(int i = 0; LED_COUNT/2 +1; i < LED_COUNT; i++){
      |                                  ~~^~~~~~~~~~~
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:57:47: error: expected ')' before ';' token
   57 |   for(int i = 0; LED_COUNT/2 +1; i < LED_COUNT; i++){
      |      ~                                        ^
      |                                               )
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/TheOneRing.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
